# Clipster

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
apps/cli/: CMakeLists.txt  main.cpp
apps/common/: CMakeLists.txt  audio_mixer.cpp  audio_mixer.hpp  audio_pipeline.cpp  audio_pipeline.hpp  recorder.cpp  recorder.hpp  session_manager.cpp  session_manager.hpp
apps/gui/: CMakeLists.txt  clipster.rc  main.cpp  main_window.cpp  main_window.hpp  settings_widget.cpp  settings_widget.hpp
apps/settings/: CMakeLists.txt  main.cpp
apps/tray/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/clipster/: game_matcher.hpp  logging.hpp  ring_buffer.hpp  settings.hpp  steam.hpp  types.hpp  util.hpp
core/src/: game_matcher.cpp  logging.cpp  ring_buffer.cpp  settings.cpp  steam.cpp  util.cpp
installer/: clipster.iss
media/: CMakeLists.txt
media/include/clipster/media/: audio_encoder.hpp  clip_writer.hpp  video_encoder.hpp
media/src/: audio_encoder.cpp  clip_writer.cpp  video_encoder.cpp
platform/win/: CMakeLists.txt
platform/win/include/clipster/win/: audio_capture.hpp  autostart.hpp  gamepad_hotkey.hpp  hotkey_manager.hpp  known_folders.hpp  process_utils.hpp  process_watcher.hpp  steam_locator.hpp  str_util.hpp  wgc_capture.hpp  window_finder.hpp
platform/win/src/: audio_capture.cpp  autostart.cpp  gamepad_hotkey.cpp  hotkey_manager.cpp  known_folders.cpp  process_utils.cpp  process_watcher.cpp  steam_locator.cpp  str_util.cpp  wgc_capture.cpp  window_finder.cpp
scripts/: release-local.ps1
tests/: CMakeLists.txt  game_matcher_test.cpp  ring_buffer_test.cpp  settings_test.cpp  steam_test.cpp  test_framework.hpp  test_main.cpp  util_test.cpp
